[gd_scene load_steps=9 format=3 uid="uid://b4bgblgmyerix"]

[ext_resource type="Script" path="res://ui/title/main_menu/main_menu.gd" id="1_ceggt"]
[ext_resource type="FontFile" uid="uid://djhm3qfxrwesl" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="2_ijs1k"]
[ext_resource type="PackedScene" uid="uid://c301odd6mkjvi" path="res://ui/title/main_menu/invite_battle.tscn" id="2_loiwi"]
[ext_resource type="Script" path="res://ui/title/main_menu/UserStats.gd" id="3_xbx36"]
[ext_resource type="StyleBox" uid="uid://c42340rnprh6b" path="res://ui/general/background/background.tres" id="4_6txdx"]
[ext_resource type="StyleBox" uid="uid://blsb7oh08e7x3" path="res://ui/general/background/slot.tres" id="8_xi73y"]

[sub_resource type="LabelSettings" id="LabelSettings_1uog2"]
font = ExtResource("2_ijs1k")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_wtmuv"]
font = ExtResource("2_ijs1k")
font_size = 24
font_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ceggt")

[node name="InviteBattle" parent="." instance=ExtResource("2_loiwi")]
layout_mode = 1
anchors_preset = -1

[node name="UserStats" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 24.0
offset_top = 24.0
offset_right = 368.0
offset_bottom = 104.0
theme_override_styles/panel = ExtResource("4_6txdx")
script = ExtResource("3_xbx36")

[node name="HBoxContainer" type="HBoxContainer" parent="UserStats"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="LevelBox" type="PanelContainer" parent="UserStats/HBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("8_xi73y")

[node name="LevelLabel" type="Label" parent="UserStats/HBoxContainer/LevelBox"]
custom_minimum_size = Vector2(64, 39)
layout_mode = 2
text = "100"
label_settings = SubResource("LabelSettings_1uog2")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UserStats/HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="UserStats/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(254, 30)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
text = "Meervix (Rating: 1800)"
label_settings = SubResource("LabelSettings_wtmuv")
vertical_alignment = 1

[node name="ExpLabel" type="Label" parent="UserStats/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(256, 30)
layout_mode = 2
text = "Exp: 0/150"
label_settings = SubResource("LabelSettings_wtmuv")
vertical_alignment = 1
